--- a/src/aces/webctrl/postgresql/resources/FindTrendsPage.html
+++ b/src/aces/webctrl/postgresql/resources/FindTrendsPage.html
@@ -155,28 +155,31 @@
   <body>
     <div style="text-align:center">
       <h1>Trend Browser</h1>
-      <div class="divGrouping">
-        <label>Status:</label>
-        <span id="statusBox"></span>
+      <div class="stickyBar">
+        <a class="e nav" href="__PREFIX__/TableEditor?table=servers">Server List</a>
+        <a class="e nav" href="__PREFIX__/TableEditor?table=operator_whitelist">Operator Whitelist</a>
+        <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist">Operator Blacklist</a>
+        <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist_exceptions">Operator Blacklist Exceptions</a>
+        <a class="e nav" href="__PREFIX__/TableEditor?table=addon_whitelist">Add-On Whitelist</a>
+        <a class="e nav" href="__PREFIX__/TableEditor?table=addon_blacklist">Add-On Blacklist</a>
+        <br><br>
+        <a class="e nav" href="__PREFIX__/index">Connection Parameters</a>
+        <a class="e nav" href="__PREFIX__/TableEditor?table=settings">Settings</a>
+        <a class="e nav" href="__PREFIX__/TableEditor?table=trend_mappings">Trend Mappings</a>
+        <a class="e nav" href="__PREFIX__/LocalOperators">View Local Operators</a>
+        <a class="e nav" href="__PREFIX__/LogViewer">View Log</a>
+        <a class="e nav" href="__DOCUMENTATION__" target="_blank">Documentation</a>
+        <br><br>
+        <button class="e" onclick="refresh()">Refresh</button>
+        <br>
+        <div class="divGrouping">
+          <label>Status:</label>
+          <span id="statusBox"></span>
+        </div>
+        <br>
       </div>
       <br>
-      <button class="e" onclick="refresh()">Refresh</button>
-      <br><br>
       <div id="mainDiv" style="display:inline-block;text-align:left;color:lightsteelblue"></div>
-      <br><br><br>
-      <a class="e nav" href="__PREFIX__/TableEditor?table=servers">Server List</a>
-      <a class="e nav" href="__PREFIX__/TableEditor?table=operator_whitelist">Operator Whitelist</a>
-      <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist">Operator Blacklist</a>
-      <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist_exceptions">Operator Blacklist Exceptions</a>
-      <a class="e nav" href="__PREFIX__/TableEditor?table=addon_whitelist">Add-On Whitelist</a>
-      <a class="e nav" href="__PREFIX__/TableEditor?table=addon_blacklist">Add-On Blacklist</a>
-      <br><br>
-      <a class="e nav" href="__PREFIX__/index">Connection Parameters</a>
-      <a class="e nav" href="__PREFIX__/TableEditor?table=settings">Settings</a>
-      <a class="e nav" href="__PREFIX__/TableEditor?table=trend_mappings">Trend Mappings</a>
-      <a class="e nav" href="__PREFIX__/LocalOperators">View Local Operators</a>
-      <a class="e nav" href="__PREFIX__/LogViewer">View Log</a>
-      <a class="e nav" href="__DOCUMENTATION__" target="_blank">Documentation</a>
     </div>
     <script>
       var imgExpand = "/_common/lvl5/skin/graphics/tree/clean_expanded.png";
