--- a/src/aces/webctrl/postgresql/resources/TableEditorPage.html
+++ b/src/aces/webctrl/postgresql/resources/TableEditorPage.html
@@ -398,9 +398,9 @@
               tr.appendChild(td);
             }
             if (createRows){
-              body.insertBefore(tr,createTR);
+              body.insertBefore(tr,createTR.nextElementSibling);
             }else{
-              body.appendChild(tr);
+              body.prepend(tr);
             }
             for (const x of tr.getElementsByTagName("TEXTAREA")){
               resize(x);
@@ -419,7 +419,7 @@
             createTR.appendChild(createTD);
             body.appendChild(createTR);
           }
-          for (var i=3;i<data.length;++i){
+          for (var i=data.length-1;i>=3;--i){
             addRow(data[i]);
           }
           checkDuplicateKeys();
@@ -469,34 +469,37 @@
   <body>
     <div style="text-align:center">
       <h1 id="mainTitle"></h1>
-      <div class="divGrouping">
-        <label>Status:</label>
-        <span id="statusBox"></span>
+      <div class="stickyBar">
+        <a class="e nav" href="__PREFIX__/TableEditor?table=servers">Server List</a>
+        <a class="e nav" href="__PREFIX__/TableEditor?table=operator_whitelist">Operator Whitelist</a>
+        <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist">Operator Blacklist</a>
+        <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist_exceptions">Operator Blacklist Exceptions</a>
+        <a class="e nav" href="__PREFIX__/TableEditor?table=addon_whitelist">Add-On Whitelist</a>
+        <a class="e nav" href="__PREFIX__/TableEditor?table=addon_blacklist">Add-On Blacklist</a>
+        <br><br>
+        <a class="e nav" href="__PREFIX__/index">Connection Parameters</a>
+        <a class="e nav" href="__PREFIX__/TableEditor?table=settings">Settings</a>
+        <a class="e nav" href="__PREFIX__/TableEditor?table=trend_mappings">Trend Mappings</a>
+        <a class="e nav" href="__PREFIX__/FindTrends">Find Trends</a>
+        <a class="e nav" href="__PREFIX__/LocalOperators">View Local Operators</a>
+        <a class="e nav" href="__PREFIX__/LogViewer">View Log</a>
+        <a class="e nav" href="__DOCUMENTATION__" target="_blank">Documentation</a>
+        <br><br>
+        <button class="e" id="saveButton" onclick="save()">Save Changes</button>
+        <button class="e" id="discardButton" onclick="discard()">Discard Changes</button>
+        <button class="e" id="refreshButton" onclick="refresh()">Refresh</button>
+        <br>
+        <div class="divGrouping">
+          <label>Status:</label>
+          <span id="statusBox"></span>
+        </div>
+        <br>
       </div>
-      <br><br>
-        <table>
-          <thead><tr id="tableHeaderRow"></tr></thead>
-          <tbody id="tableBody"></tbody>
-        </table>
       <br>
-      <button class="e" id="saveButton" onclick="save()">Save Changes</button>
-      <button class="e" id="discardButton" onclick="discard()">Discard Changes</button>
-      <button class="e" id="refreshButton" onclick="refresh()">Refresh</button>
-      <br><br>
-      <a class="e nav" href="__PREFIX__/TableEditor?table=servers">Server List</a>
-      <a class="e nav" href="__PREFIX__/TableEditor?table=operator_whitelist">Operator Whitelist</a>
-      <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist">Operator Blacklist</a>
-      <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist_exceptions">Operator Blacklist Exceptions</a>
-      <a class="e nav" href="__PREFIX__/TableEditor?table=addon_whitelist">Add-On Whitelist</a>
-      <a class="e nav" href="__PREFIX__/TableEditor?table=addon_blacklist">Add-On Blacklist</a>
-      <br><br>
-      <a class="e nav" href="__PREFIX__/index">Connection Parameters</a>
-      <a class="e nav" href="__PREFIX__/TableEditor?table=settings">Settings</a>
-      <a class="e nav" href="__PREFIX__/TableEditor?table=trend_mappings">Trend Mappings</a>
-      <a class="e nav" href="__PREFIX__/FindTrends">Find Trends</a>
-      <a class="e nav" href="__PREFIX__/LocalOperators">View Local Operators</a>
-      <a class="e nav" href="__PREFIX__/LogViewer">View Log</a>
-      <a class="e nav" href="__DOCUMENTATION__" target="_blank">Documentation</a>
+      <table>
+        <thead><tr id="tableHeaderRow"></tr></thead>
+        <tbody id="tableBody"></tbody>
+      </table>
       <span id="hiddenSpan" style="min-width:3em;color:black;display:inline-block;position:absolute;left:-100000px;white-space:pre"></span>
     </div>
     <script>
