--- a/src/aces/webctrl/postgresql/resources/MainPage.html
+++ b/src/aces/webctrl/postgresql/resources/MainPage.html
@@ -323,6 +323,7 @@
       <a class="e nav" href="__PREFIX__/TableEditor?table=addon_blacklist">Add-On Blacklist</a>
       <br><br>
       <a class="e nav" href="__PREFIX__/TableEditor?table=settings">Settings</a>
+      <a class="e nav" href="__PREFIX__/TableEditor?table=pending_commands">Pending Commands</a>
       <a class="e nav" href="__PREFIX__/TableEditor?table=trend_mappings">Trend Mappings</a>
       <a class="e nav" href="__PREFIX__/FindTrends">Find Trends</a>
       <a class="e nav" href="__PREFIX__/LocalOperators">View Local Operators</a>
