--- a/src/aces/webctrl/postgresql/resources/TableEditorPage.html
+++ b/src/aces/webctrl/postgresql/resources/TableEditorPage.html
@@ -460,6 +460,18 @@
         }
         return true;
       }
+      function deleteAll(){
+        let c = 0;
+        for (const x of Array.from(document.getElementById("tableBody").getElementsByTagName("TR"))){
+          if (x.fields){
+            c = 1;
+            x.parentNode.removeChild(x);
+          }
+        }
+        if (c==1){
+          registerChange();
+        }
+      }
       function setStatus(color, message){
         statusBox.style.color = color;
         statusBox.innerText = message;
@@ -470,21 +482,23 @@
     <div style="text-align:center">
       <h1 id="mainTitle"></h1>
       <div class="stickyBar">
-        <a class="e nav" href="__PREFIX__/TableEditor?table=servers">Server List</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=operator_whitelist">Operator Whitelist</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist">Operator Blacklist</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist_exceptions">Operator Blacklist Exceptions</a>
+        <a class="e nav" href="__PREFIX__/LocalOperators">View Local Operators</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=addon_whitelist">Add-On Whitelist</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=addon_blacklist">Add-On Blacklist</a>
         <br><br>
         <a class="e nav" href="__PREFIX__/index">Connection Parameters</a>
+        <a class="e nav" href="__PREFIX__/TableEditor?table=servers">Server List</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=settings">Settings</a>
+        <a class="e nav" href="__PREFIX__/TableEditor?table=pending_commands">Pending Commands</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=trend_mappings">Trend Mappings</a>
         <a class="e nav" href="__PREFIX__/FindTrends">Find Trends</a>
-        <a class="e nav" href="__PREFIX__/LocalOperators">View Local Operators</a>
         <a class="e nav" href="__PREFIX__/LogViewer">View Log</a>
         <a class="e nav" href="__DOCUMENTATION__" target="_blank">Documentation</a>
         <br><br>
+        <button class="e" id="deleteAllButton" onclick="deleteAll()">Delete All</button>
         <button class="e" id="saveButton" onclick="save()">Save Changes</button>
         <button class="e" id="discardButton" onclick="discard()">Discard Changes</button>
         <button class="e" id="refreshButton" onclick="refresh()">Refresh</button>
