--- a/src/aces/webctrl/postgresql/resources/TableEditorPage.html
+++ b/src/aces/webctrl/postgresql/resources/TableEditorPage.html
@@ -482,6 +482,7 @@
     <div style="text-align:center">
       <h1 id="mainTitle"></h1>
       <div class="stickyBar">
+        <a class="e nav" href="__PREFIX__/TableEditor?table=tunnels">SSH Tunnels</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=operator_whitelist">Operator Whitelist</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist">Operator Blacklist</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist_exceptions">Operator Blacklist Exceptions</a>
