--- a/src/aces/webctrl/postgresql/resources/LocalOperatorsPage.html
+++ b/src/aces/webctrl/postgresql/resources/LocalOperatorsPage.html
@@ -70,6 +70,7 @@
         <a class="e nav" href="__PREFIX__/index">Connection Parameters</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=settings">Settings</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=pending_commands">Pending Commands</a>
+        <a class="e nav" href="__PREFIX__/TableEditor?table=tunnels">SSH Tunnels</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=trend_mappings">Trend Mappings</a>
         <a class="e nav" href="__PREFIX__/FindTrends">Find Trends</a>
         <a class="e nav" href="__PREFIX__/LogViewer">View Log</a>
