--- a/src/aces/webctrl/postgresql/resources/LogViewerPage.html
+++ b/src/aces/webctrl/postgresql/resources/LogViewerPage.html
@@ -16,6 +16,7 @@
       <h1 id="mainTitle">Log Viewer</h1>
       <div class="stickyBar">
         <a class="e nav" href="__PREFIX__/TableEditor?table=servers">Server List</a>
+        <a class="e nav" href="__PREFIX__/TableEditor?table=tunnels">SSH Tunnels</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=operator_whitelist">Operator Whitelist</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist">Operator Blacklist</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist_exceptions">Operator Blacklist Exceptions</a>
