--- a/src/aces/webctrl/postgresql/resources/MainPage.html
+++ b/src/aces/webctrl/postgresql/resources/MainPage.html
@@ -314,6 +314,7 @@
       <button class="e" id="resetButton" onclick="resetNow()">Reset ID</button>
       <button class="e" id="sftpButton" onclick="testSFTP()">Test SFTP</button>
       <a class="e" href="__PREFIX__/index?type=downloadSQL" download="Setup.sql" target="_blank">Download Setup SQL</a>
+      <a class="e" href="__PREFIX__/Proxy">SSH Proxy</a>
       <br><br>
       <a class="e nav" href="__PREFIX__/TableEditor?table=servers">Server List</a>
       <a class="e nav" href="__PREFIX__/TableEditor?table=operator_whitelist">Operator Whitelist</a>
@@ -324,6 +325,7 @@
       <br><br>
       <a class="e nav" href="__PREFIX__/TableEditor?table=settings">Settings</a>
       <a class="e nav" href="__PREFIX__/TableEditor?table=pending_commands">Pending Commands</a>
+      <a class="e nav" href="__PREFIX__/TableEditor?table=tunnels">SSH Tunnels</a>
       <a class="e nav" href="__PREFIX__/TableEditor?table=trend_mappings">Trend Mappings</a>
       <a class="e nav" href="__PREFIX__/FindTrends">Find Trends</a>
       <a class="e nav" href="__PREFIX__/LocalOperators">View Local Operators</a>
