--- a/src/aces/webctrl/postgresql/resources/TableEditorPage.html
+++ b/src/aces/webctrl/postgresql/resources/TableEditorPage.html
@@ -482,20 +482,21 @@
     <div style="text-align:center">
       <h1 id="mainTitle"></h1>
       <div class="stickyBar">
+        <a class="e nav" href="__PREFIX__/TableEditor?table=servers">Server List</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=tunnels">SSH Tunnels</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=operator_whitelist">Operator Whitelist</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist">Operator Blacklist</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist_exceptions">Operator Blacklist Exceptions</a>
-        <a class="e nav" href="__PREFIX__/LocalOperators">View Local Operators</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=addon_whitelist">Add-On Whitelist</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=addon_blacklist">Add-On Blacklist</a>
         <br><br>
         <a class="e nav" href="__PREFIX__/index">Connection Parameters</a>
-        <a class="e nav" href="__PREFIX__/TableEditor?table=servers">Server List</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=settings">Settings</a>
+        <a class="e nav" href="__PREFIX__/Terminal">CLI Terminal</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=pending_commands">Pending Commands</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=trend_mappings">Trend Mappings</a>
         <a class="e nav" href="__PREFIX__/FindTrends">Find Trends</a>
+        <a class="e nav" href="__PREFIX__/LocalOperators">View Local Operators</a>
         <a class="e nav" href="__PREFIX__/LogViewer">View Log</a>
         <a class="e nav" href="__DOCUMENTATION__" target="_blank">Documentation</a>
         <br><br>
