--- a/src/aces/webctrl/postgresql/resources/LocalOperatorsPage.html
+++ b/src/aces/webctrl/postgresql/resources/LocalOperatorsPage.html
@@ -61,6 +61,7 @@
       <h1 id="mainTitle">Local Operators</h1>
       <div class="stickyBar">
         <a class="e nav" href="__PREFIX__/TableEditor?table=servers">Server List</a>
+        <a class="e nav" href="__PREFIX__/TableEditor?table=tunnels">SSH Tunnels</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=operator_whitelist">Operator Whitelist</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist">Operator Blacklist</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist_exceptions">Operator Blacklist Exceptions</a>
@@ -69,8 +70,8 @@
         <br><br>
         <a class="e nav" href="__PREFIX__/index">Connection Parameters</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=settings">Settings</a>
+        <a class="e nav" href="__PREFIX__/Terminal">CLI Terminal</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=pending_commands">Pending Commands</a>
-        <a class="e nav" href="__PREFIX__/TableEditor?table=tunnels">SSH Tunnels</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=trend_mappings">Trend Mappings</a>
         <a class="e nav" href="__PREFIX__/FindTrends">Find Trends</a>
         <a class="e nav" href="__PREFIX__/LogViewer">View Log</a>
