--- a/src/aces/webctrl/postgresql/resources/LogViewerPage.html
+++ b/src/aces/webctrl/postgresql/resources/LogViewerPage.html
@@ -25,6 +25,7 @@
         <br><br>
         <a class="e nav" href="__PREFIX__/index">Connection Parameters</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=settings">Settings</a>
+        <a class="e nav" href="__PREFIX__/Terminal">CLI Terminal</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=pending_commands">Pending Commands</a>
         <a class="e nav" href="__PREFIX__/TableEditor?table=trend_mappings">Trend Mappings</a>
         <a class="e nav" href="__PREFIX__/FindTrends">Find Trends</a>
