--- a/src/aces/webctrl/postgresql/resources/MainPage.html
+++ b/src/aces/webctrl/postgresql/resources/MainPage.html
@@ -317,6 +317,7 @@
       <a class="e" href="__PREFIX__/Proxy">SSH Proxy</a>
       <br><br>
       <a class="e nav" href="__PREFIX__/TableEditor?table=servers">Server List</a>
+      <a class="e nav" href="__PREFIX__/TableEditor?table=tunnels">SSH Tunnels</a>
       <a class="e nav" href="__PREFIX__/TableEditor?table=operator_whitelist">Operator Whitelist</a>
       <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist">Operator Blacklist</a>
       <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist_exceptions">Operator Blacklist Exceptions</a>
@@ -324,8 +325,8 @@
       <a class="e nav" href="__PREFIX__/TableEditor?table=addon_blacklist">Add-On Blacklist</a>
       <br><br>
       <a class="e nav" href="__PREFIX__/TableEditor?table=settings">Settings</a>
+      <a class="e nav" href="__PREFIX__/Terminal">CLI Terminal</a>
       <a class="e nav" href="__PREFIX__/TableEditor?table=pending_commands">Pending Commands</a>
-      <a class="e nav" href="__PREFIX__/TableEditor?table=tunnels">SSH Tunnels</a>
       <a class="e nav" href="__PREFIX__/TableEditor?table=trend_mappings">Trend Mappings</a>
       <a class="e nav" href="__PREFIX__/FindTrends">Find Trends</a>
       <a class="e nav" href="__PREFIX__/LocalOperators">View Local Operators</a>
